<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ingredient_root_view"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/medium_padding"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >

    <TextView
            android:id="@+id/ingredient_quantity"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_padding"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="end"
            android:textColor="@color/text_black"
            tools:text="1"
            />

    <TextView
            android:id="@+id/ingredient_measure"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_padding"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@color/text_black"
            tools:text="cups"
            />

    <TextView
            android:id="@+id/ingredient_name"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:gravity="bottom"
            android:textColor="@color/text_black"
            tools:text="eggs Eggs eggs Eggs Tamago tamago Eggs eggs"
            />

</LinearLayout>