<resources>
    <string name="app_name">Baking Time</string>

    <string name="name">Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="quantity">Quantity</string>
    <string name="measure">Measure</string>
    <string name="ingredient">Ingredient</string>
    <string name="steps">Steps</string>

    <string name="error_video">Oops, there seems to be an error loading the video</string>
    <string name="action_close">Close</string>

    <string name="error_list">Oops, there seems to be an error fetching the recipes</string>
    <string name="action_retry">Retry</string>

    <string name="add_widget">Add widget</string>
    <string name="widget_load_to_show">Load a recipe in-app to show ingredients</string>

</resources>
